# quantpulse

./: .env.example  .gitattributes  .gitignore  DEPLOYMENT.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: HeatmapInitialiser.tsx  TickerDetail.tsx  WSProvider.tsx  layout.tsx  page.tsx
frontend/app/dashboard/alerts/: page.tsx
frontend/app/dashboard/tickers/: page.tsx
frontend/app/dashboard/training/: page.tsx
frontend/components/alerts/: AlertFeed.tsx
frontend/components/charts/: CandlestickChart.tsx
frontend/components/layout/: Sidebar.tsx
frontend/components/regime/: ProbabilityBar.tsx  RegimeBadge.tsx  RegimeHeatmap.tsx
frontend/hooks/: useRegimeWS.ts
frontend/lib/: api.ts  store.ts
frontend_streamlit/: Dockerfile  app.py  requirements.txt
frontend_streamlit/lib/: api.py  auth.py
frontend_streamlit/pages/: 1_Dashboard.py  2_Ticker_Detail.py  3_Alerts.py  4_Training.py
infra/grafana/dashboards/: quantpulse.json
infra/grafana/provisioning/dashboards/: dashboards.yml  quantpulse.json
infra/kafka/: create-topics.sh
infra/mlflow/: Dockerfile
infra/postgres/init/: 001_schema.sql
infra/prometheus/: prometheus.yml
notebooks/: quickstart.ipynb
services/alert/: Dockerfile  pyproject.toml
services/alert/src/quantpulse_alert/: __main__.py  app.py
services/alert/tests/: test_alert.py
services/api/: Dockerfile  pyproject.toml
services/api/src/quantpulse_api/: __main__.py  app.py
services/api/tests/: test_api.py
services/feature/: Dockerfile  pyproject.toml
services/feature/src/quantpulse_feature/: __main__.py  app.py  config.py  consumer.py  store.py
services/feature/src/quantpulse_feature/indicators/: __init__.py  macro.py  momentum.py  normalisation.py  volatility.py
services/feature/src/quantpulse_feature/pipeline/: feature_pipeline.py
services/feature/tests/: test_feature.py
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/src/quantpulse_ingestion/: __main__.py  app.py  config.py  publisher.py  scheduler.py  schemas.py  writer.py
services/ingestion/src/quantpulse_ingestion/fetchers/: __init__.py  base.py  macro.py  ohlcv.py  options.py
services/ingestion/tests/: test_ingestion.py
services/regime/: Dockerfile  pyproject.toml
services/regime/src/quantpulse_regime/: __main__.py  app.py  config.py
services/regime/src/quantpulse_regime/inference/: engine.py
services/regime/src/quantpulse_regime/models/: ensemble.py  hmm_model.py  transformer_model.py
services/regime/src/quantpulse_regime/training/: trainer.py
services/regime/tests/: test_regime.py
shared/: pyproject.toml
shared/src/quantpulse_shared/: __init__.py
shared/src/quantpulse_shared/db/: __init__.py
shared/src/quantpulse_shared/kafka/: __init__.py
shared/src/quantpulse_shared/models/: __init__.py
shared/src/quantpulse_shared/schemas/: __init__.py
