[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantpulse-alert"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "quantpulse-shared",
    "aiokafka>=0.10",
    "asyncpg>=0.29",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.1", "pytest-asyncio>=0.23", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/quantpulse_alert"]
