[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantpulse-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "quantpulse-shared",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "websockets>=12.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "aiokafka>=0.10",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "orjson>=3.10",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.1", "pytest-asyncio>=0.23", "httpx", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/quantpulse_api"]
