[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantpulse-ingestion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "quantpulse-shared",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "polars>=0.20",
    "httpx>=0.27",
    "aiokafka>=0.10",
    "asyncpg>=0.29",
    "apscheduler>=3.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "tenacity>=8.3",
    "orjson>=3.10",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/quantpulse_ingestion"]
