[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantpulse-regime"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "quantpulse-shared",
    "polars>=0.20",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "hmmlearn>=0.3",
    "torch>=2.2",
    "mlflow>=2.12",
    "aiokafka>=0.10",
    "asyncpg>=0.29",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "orjson>=3.10",
    "pyarrow>=16.0",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.1", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/quantpulse_regime"]
